# gasmemo

./: .gitignore  Cargo.toml  README.md  diesel.toml  i18n.toml
i18n/uk/: gasmemo.ftl
migrations/2022-08-12-001317_create_vehicle/: down.sql  up.sql
migrations/2022-08-19-193019_create_event/: up.sql
src/: config.rs  main.rs
src/interface/: mod.rs
src/interface/cli/: io.rs  mod.rs
src/persistence/: mod.rs  repository.rs  schema.rs
src/persistence/model/: event.rs  mod.rs  vehicle.rs
