[package]
name = "gasmemo"
version = "0.0.1"
edition = "2021"
authors = ["Artem Komarov <i.linker@gmail.com>"]
description = "Vehicle expense accounting"
readme = "README.md"

[dependencies]
chrono = "0.4.19"
diesel = { version = "1.4.8", features = ["sqlite"] }
diesel-derive-enum = { version = "1.1.2", features = ["sqlite"] }
dotenv = "0.15.0"
i18n-embed = { version = "0.13.4", features = ["fluent-system"] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.4.0"
unic-langid = "0.9.0"
